# ece650-threads

./: CMakeLists.txt  README.md
helper/: CMakeLists.txt  helper.c
include/: helper.h
kill-ex/: CMakeLists.txt  kill-ex.c
lk/: CMakeLists.txt  lk.c
prod-cons/: CMakeLists.txt  t-unsafe.c  t.c
tim/: CMakeLists.txt  tim.c
tinout/: CMakeLists.txt  tinout-blk.c  tinout.c
